# mcp_sqlite_memory_bank

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  SEARCH_ENHANCEMENT_ROADMAP.md  debug_auto_search.py  debug_query_test.py  debug_semantic_test.py  debug_test_failure.py  demo_improvements.py  minimal_test_server.py  proposed_agent_tools.py  pyproject.toml  requirements.txt  restart-mcp.ps1  setup.cfg  test_mcp_connection.py  test_upsert.py  test_upsert_enhancement.py  uvx_install_commands.md  validate_mcp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: code.review.instructions.md  general.instructions.md  memory.instructions.md  project.instructions.backup.md  project.instructions.compact.md  project.instructions.md
.github/workflows/: ci.yml  pages.yml
docs/: api.md  code_deduplication_achievement.md  index.md
examples/: agent_memory_example.py  client_example.py  memory_instructions.md  run_server.py
scripts/: generate_api_docs.py  update_docs.py
src/mcp_sqlite_memory_bank/: __init__.py  __main__.py  database.py  graph_analyzer.py  graph_tools.py  prompts.py  resources.py  self_healing.py  semantic.py  server.py  types.py  utils.py
src/mcp_sqlite_memory_bank/tools/: __init__.py  analytics.py  basic.py  d3_visualization.py  discovery.py  llm_optimization.py  optimization.py  search.py  visualization.py
tests/: README.md  conftest.py  test_api.py  test_discovery_tools.py  test_edge_cases.py  test_embedding_filtering.py  test_mocks.py  test_performance.py  test_server.py
