[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_sqlite_memory_bank"
version = "1.2.2"
description = "A dynamic, agent/LLM-friendly SQLite memory bank for MCP servers."
authors = [
    { name="Robert Meisner", email="robert@catchit.pl" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.0",
    "fastmcp"
]

[project.scripts]
mcp-sqlite-memory-bank = "mcp_sqlite_memory_bank.server:main"
mcp_sqlite_memory_bank = "mcp_sqlite_memory_bank.server:main"

[project.urls]
Homepage = "https://github.com/robertmeisner/mcp_sqlite_memory_bank"
Source = "https://github.com/robertmeisner/mcp_sqlite_memory_bank"
Issues = "https://github.com/robertmeisner/mcp_sqlite_memory_bank/issues"
  
[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*__pycache__*", "*.pyc", "*.pyo"]
