[metadata]
name = mcp_sqlite_memory_bank
version = 0.1.0
description = A dynamic, agent/LLM-friendly SQLite memory bank for MCP servers.
author = Robert Meisner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robertmeisner/mcp_sqlite_memory_bank
project_urls =
    Source = https://github.com/robertmeisner/mcp_sqlite_memory_bank
    Issues = https://github.com/robertmeisner/mcp_sqlite_memory_bank/issues


package_dir =
    =src
packages = find:
python_requires = >=3.9
  # ...existing code...
[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
exclude = *__pycache__*
