[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
exclude = *__pycache__*

[flake8]
max-line-length = 88
extend-ignore = E203,W503,E501,W293
exclude = 
    .git,
    __pycache__,
    .tox,
    .venv,
    venv,
    .pytest_cache,
    build,
    dist,
    *.egg-info
